--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122949473-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-122949473-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qYNjmP94mL" once="menu" id="menu2-n">
 
     
@@ -55,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">free web builder</a></section><section class="header12 cid-qYCmz2LHNA mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobiri.se/h">create a web page for free</a></section><section class="header12 cid-qYCmz2LHNA mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -143,7 +157,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MoPOnV0LR/pMoSCPL0zuyUE0EfPAAUIVIKdUAM3gKL8wPvV0LUwNrNpj2WbVW+nsAMGGccv0Rb0d44x6sn1LNVJngf0Gqfm0gLwJRwbuyyBgVf5a/ReZiyOAs2L53nar" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KpVf9XjgZ0yU/CsmKdLQAAv1JkoQjVdyQBh503IZjP9o5AyWunVgEipxLnY4ffmTknX9uRyqNDNLhJorqX0ojJSt65nr+h0zmHxEU1M3oYXtcfStbcqNXZc71TmIgVd6" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-6">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
