--- a/page1.html
+++ b/page1.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">create a website</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
+<section class="engine"><a href="https://mobiri.se/v">html templates</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
 
     
 
@@ -76,7 +76,7 @@
 
     <div class="container">
         <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"><br><br><strong>The LoyalLabs Solution</strong></h2>
-        <h3 class="mbr-section-subtitle  display-5 align-center mbr-light mbr-fonts-style"><br>The Yellow Hive Solution will enable businesses to incentivize and reward its customers with loyalty points from the world’s most popular online travel brands.<br><br> 
+        <h3 class="mbr-section-subtitle  display-5 align-center mbr-light mbr-fonts-style"><br>The LoyalLabs Solution will enable businesses to incentivize and reward its customers with loyalty points from the world’s most popular online travel brands.<br><br> 
 <div>
 </div><div>Getting started is easy and painless, but best of all, it generates real value by incentivizing customers to develop a deeper relationship with your business and brand.</div></h3>
     </div>
@@ -402,7 +402,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="t3c2WIKRa2epmOvX1laBw9VANOKnmYoJCEvdyxPpQcQb/YOaYFbTZSO1A8Zq+saNHadb9BUIwRcxEh8LVcqN2K36dcttA7cGplRGfGr+4YZKRVn44g1nFndj+jbxcW1i" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VucJE7bwA4Up46PecucDkE1E9iAcLhZ1swoDhpgaiYTpbWmd3po9n8GuHazYdpbbccZW80TOb+CZWE9ciX4vn0OXKKV8RnFuDX6t1QIY3WSf6N/stiIzamrRhBMSBDq9" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-o">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
