create github pages

--- a/page1.html
+++ b/page1.html
@@ -57,7 +57,7 @@
                         <a href="index.html"><img src="assets/images/logo-402x138.png" alt="Mobirise" title="" style="height: 3.8rem;"></a>
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.com"><p>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="index.html"><p>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COMING SOON!</p></a></span>
             </div>
         </div>
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/v">html templates</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
+<section class="engine"><a href="https://mobiri.se/b">create your own website for free</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
 
     
 
@@ -402,7 +402,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VucJE7bwA4Up46PecucDkE1E9iAcLhZ1swoDhpgaiYTpbWmd3po9n8GuHazYdpbbccZW80TOb+CZWE9ciX4vn0OXKKV8RnFuDX6t1QIY3WSf6N/stiIzamrRhBMSBDq9" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zSn7GiIXChRQuw+Z9jLfxXzSyNhzWC33Sea4V7GRiPo4giyeBMFNTIvp6g/hlFMhHukBc1UjAZZlBuzKKeXRoJZef9hjeDC2OyqykCQK7JXx/3Pw4QOs85sCLmuRxJYp" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-o">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
