--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">site builder</a></section><section class="header12 cid-qYCmz2LHNA mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobiri.se/g">build your own website</a></section><section class="header12 cid-qYCmz2LHNA mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -156,7 +156,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="H5UohQBpNEBUsH5wxNT3tYjSC8JPQMKAmibmb6FiD0kIe5ySY4SLqzLjcYydLpDvAphtihpywGe77pyXKquxLkai7AIxf0o7L8xSMoMef6oD3lWaZcGKHseE4j7YDJYB" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6FKS7NXM9LHt9FO2xThiC4rNAZ7ZoOrt7XqVi41W1VJyIfVj2rpmQVMFEVYLnqeUUEf5650ydR1/MDOOZcW7rno2tbkfYg5XexIROtTywRhpdwitJl/bDEoBU+Un/gCX" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-6">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
@@ -282,7 +282,7 @@ Have a wonderfull day!</div>
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2018 Yellow Hive - All Rights Reserved
+                    © Copyright 2018 LoyalLabs &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
