create github pages

--- a/page1.html
+++ b/page1.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/v">free html templates</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
+<section class="engine"><a href="https://mobiri.se/k">develop free website</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
 
     
 
@@ -402,7 +402,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NLzqX9tVxMxeyy7x+xyd1r9Clkv/wSFGqSEN6clGqNH2YtEcJFeFNawuGp8b5tDInk3/rG1OqD7GS7XjEy0QjtGNxHGiGr8OlyhDZM6h7LWNtzg9EVXDxqk/xRp5pojD" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JBlazlsPfabKjM7D6XZ8lxt8q+G6HVV3gHD+mokgegBcjrRTEKpekVMq/CKaqBqX62r7GyX2A484Yv8Mb0T+Bk4QGqIybiKM2Xvl/5TY7rOVrjbZYXGRpYWroXpRJSLj" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-o">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
