--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-402x138.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>A loyalty platform tailored for the travel industry.
+</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -68,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/g">build your own website</a></section><section class="header12 cid-qYCmz2LHNA mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobiri.se/s">bootstrap themes</a></section><section class="header12 cid-qYCmz2LHNA mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -156,7 +157,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6FKS7NXM9LHt9FO2xThiC4rNAZ7ZoOrt7XqVi41W1VJyIfVj2rpmQVMFEVYLnqeUUEf5650ydR1/MDOOZcW7rno2tbkfYg5XexIROtTywRhpdwitJl/bDEoBU+Un/gCX" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ewsFRlG1qdN/VG/yGSBCm0yFQr9y/TzEttNmn/cE2u+86nEVNGVM6FWSANTTREXJ15DhWyh/vafoif+a6cJFZ122G2VXYDNr1sBzGE2s1iCnkSWIlPf8nq0F9DVXmosV" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-6">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
