--- a/page1.html
+++ b/page1.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/k">develop free website</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
+<section class="engine"><a href="https://mobiri.se/g">how to build your own site for free</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
 
     
 
@@ -85,7 +85,7 @@
             <ul class="nav nav-tabs pt-3 mt-5" role="tablist">
                 <li class="nav-item mbr-fonts-style"><a class="nav-link active show display-7" role="tab" data-toggle="tab" href="#tabs3-h_tab0" aria-selected="true">
                         How it works</a></li>
-                <li class="nav-item mbr-fonts-style"><a class="nav-link  active show display-7" role="tab" data-toggle="tab" href="#tabs3-h_tab1" aria-selected="true">
+                <li class="nav-item mbr-fonts-style"><a class="nav-link  show active display-7" role="tab" data-toggle="tab" href="#tabs3-h_tab1" aria-selected="true">
                         Benefits</a></li>
                 <li class="nav-item mbr-fonts-style"><a class="nav-link active show display-7" role="tab" data-toggle="tab" href="#tabs3-h_tab2" aria-selected="true">
                         What's next</a></li>
@@ -177,7 +177,7 @@
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Customer insights<br><br></h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">
-                                Analyze customer behaviours and preferences from a market, business channel, demographic and individual perspective.<br><br></p>
+                                Analyze customer behaviors and preferences from a market, business channel, demographic and individual perspective.<br><br></p>
                         </div>
                     </div>
                 </div>
@@ -402,7 +402,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JBlazlsPfabKjM7D6XZ8lxt8q+G6HVV3gHD+mokgegBcjrRTEKpekVMq/CKaqBqX62r7GyX2A484Yv8Mb0T+Bk4QGqIybiKM2Xvl/5TY7rOVrjbZYXGRpYWroXpRJSLj" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="STDzGDMEXq46oGXx3rM6ZjRjUedZZvMr0TgavuFWmNz02BxkCfbH80XC4boOHDnIULh6aggOGMi+NFm8KuJ0JLtyJOXbtsA7DN/x/7XhAuPF1aL29/V/McLUw9WDyWDO" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-o">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
