--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 </h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Build, customize and manage a successful loyalty program in one system designed for online travel agents and travel resellers.&nbsp;<br></p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="page1.html">MORE</a></div>
+                  <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="https://www.surveymonkey.com/r/GGQZHK3">Take our survey</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
