Add Surveymonkey script & survey button

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
 </h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Build, customize and manage a successful loyalty program in one system designed for online travel agents and travel resellers.&nbsp;<br></p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="page1.html">MORE</a></div>
-
-                    <div class="icons-media-container mbr-white">
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="https://www.surveymonkey.com/r/GGQZHK3">Take our survey</a></div>
+                    
+                  
+                  <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
                             <a href="https://mobirise.com/">
@@ -304,7 +306,7 @@ Have a wonderfull day!</div>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
-  
+  <script>(function(t,e,s,o){var n,a,c;t.SMCX=t.SMCX||[],e.getElementById(o)||(n=e.getElementsByTagName(s),a=n[n.length-1],c=e.createElement(s),c.type="text/javascript",c.async=!0,c.id=o,c.src=["https:"===location.protocol?"https://":"http://","widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd4x_2Bw67PbIOjG7_2FavSW2sCrSdjtfup2AvVQ1HLd8RZqX.js"].join(""),a.parentNode.insertBefore(c,a))})(window,document,"script","smcx-sdk");</script>
   
 </body>
 </html>
