--- a/index.html
+++ b/index.html
@@ -266,7 +266,9 @@ Have a wonderfull day!</div>
                         <span class="btn btn-social plusone mx-2" title="Share link on Google+">
                             <i class="socicon socicon-googleplus"></i>
                         </span>
-                        
+                        <span class="btn btn-social linkedin mx-2" title="Share link on LinkedIn" onclick="window.location.href='https://www.linkedin.com/shareArticle?mini=true&url=https://drusk19.github.io/LandingPage1'">
+                            <i class="socicon socicon-linkedin"></i>
+                        </span>
                         
                     </div>
                 </div>
