create github pages

--- a/page1.html
+++ b/page1.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">free site builder</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
+<section class="engine"><a href="https://mobiri.se/e">how to make a site for free</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
 
     
 
@@ -401,7 +401,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SWY/BYDiKYdB/Q5eSJ9DShER9eLxji1jMgXdlheTUGCvMz9o2fgzc/Ch/CqRRHO6lpQxhsKjL/qtHgUxFn1iTzoekz99AqO5oFbKOA55gDXLN/jqKDrMyI+Gy8Qtd1ow" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6Izqo9NfiHSO9jYrgeT6dFFZRP73PwGcH5QtwCRAn76tJum/7GVzyc6aB7R9MehS/OAdJaEeSGm8qrYDvr25sTlLx02bV8uVC+NlhEUdhMq1Zz6v9AYNPRrhUqAMdtpn" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-o">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
