--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Build, customize and manage a successful loyalty program in one system designed for online travel agents and travel resellers.&nbsp;<br></p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="page1.html">MORE</a></div>
 
-                    <div class="icons-media-container mbr-white">
+                  <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
                             <a href="https://mobirise.com/">
@@ -241,7 +241,9 @@ Have a wonderfull day!</div>
                         <span class="btn btn-social plusone mx-2" title="Share link on Google+">
                             <i class="socicon socicon-googleplus"></i>
                         </span>
-                        
+                        <span class="btn btn-social linkedin mx-2" title="Share link on LinkedIn" onclick="window.location.href='https://www.linkedin.com/shareArticle?mini=true&amp;url=https://drusk19.github.io/LandingPage1'">
+                            <i class="socicon socicon-linkedin"></i>
+                        </span>
                         
                     </div>
                 </div>
