create github pages

--- a/page1.html
+++ b/page1.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
+<section class="engine"><a href="https://mobiri.se/g">build a site for free</a></section><section class="tabs3 cid-qYN7lYoQYu" id="tabs3-h">
 
     
 
@@ -402,7 +402,7 @@
 We will be in touch shortly.
 
 Have a wonderfull day!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qCFNDeLUzsI7lM3p7/eqfQOkqno3E9HqTJhjmPPwxHSszVUBMbRKhtsRJU9qPxHLPHikd/3UAV3KkdfGRlBMDz2oUZMHqP0TTEoVSkIUkpHLM9PC/Uu9JtSt7nXUJhci" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sjvwwOBLJUn21CVQOL7sO89iJgdJ/NZrfFM3c04YAnJHyD+T8IQCPu1S/TWDCVbvxlJ/M6OJLCp7E6adX28FYnRGCBF1SEmYq1BWM2uTaj0Vrjl2YwmP6twPbqD0OHl3" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Enter your email..." data-form-field="Email" required="" id="email-form3-o">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Find out more</button></span>
