--- a/page1.html
+++ b/page1.html
@@ -437,6 +437,11 @@ Have a wonderfull day!</div>
                             <i class="socicon socicon-googleplus"></i>
                         </span>
                         
+<span class="btn btn-social linkedin mx-2" title="Share link on LinkedIn" onclick="window.location.href='https://www.linkedin.com/shareArticle?
+
+mini=true&amp;url=https://drusk19.github.io/LandingPage1'">
+                            <i class="socicon socicon-linkedin"></i>
+                        </span>
                         
                     </div>
                 </div>
