--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">A loyalty platform tailored for the travel industry.
 </h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Build, customize and manage a successful loyalty program in one system designed for online travel agents and travel resellers.&nbsp;<br></p>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Build, customize and manage a successful loyalty program in one system designed for OTAs and travel resellers.&nbsp;<br></p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="page1.html">MORE</a></div>
 
                     <div class="icons-media-container mbr-white">
